--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,7 +15,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
+environment:
+  sdk: ">=2.2.2 <3.0.0"
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
